--- a/分区指南.md
+++ b/分区指南.md
@@ -1,18 +1,40 @@
 # 分区指南
 
+## 分区基础
+
+### MBR
+
+最大支持2TB
+
+系统只能安装在主分区
+
+最多支持四个主分区
+
+扩展分区要占一个主分区
+
+### GPT
+
+最大支持18EB
+
+指出无限多个主分区
+
 ## 硬盘说明
 
-hd IDE硬盘
+```
+[硬盘类型][硬盘属性][硬盘分区]
+```
 
-sd SCSI硬盘
+| 参数 | 代表硬盘类型 |
+| ---- | ------------ |
+| hd   | IDE硬盘      |
+| sd   | SCSI硬盘     |
 
-a 基本盘
-
-b 从属盘
-
-c 辅助主盘
-
-d 辅助从属盘
+| 参数 | 硬盘属性   |
+| ---- | ---------- |
+| a    | 基本盘     |
+| b    | 从属盘     |
+| c    | 辅助主盘   |
+| d    | 辅助从属盘 |
 
 数字 代表分区
 
@@ -24,9 +46,14 @@ sda3 SCSI硬盘的第三个主分区
 lsblk -f *可查看uuid
 ```
 
-![image-20220717081117199](C:\Users\JInXiN\AppData\Roaming\Typora\typora-user-images\image-20220717081117199.png)
+![image-20220717081117199](https://propran-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220717081117199.png)
 
-## 格式化硬盘
+## 格式化硬盘(mkfs)
+
+| 参数                        | 说明                 |
+| --------------------------- | -------------------- |
+| -t [ext2/ext3/ext4/xfs/...] | 设定文件系统类型     |
+| -c                          | 检查磁盘是否存在坏道 |
 
 ```
 mkfs -t ext4 硬盘名称
@@ -49,6 +76,11 @@ vim /etc/fstab *进入fstab，里面储存挂载情况
 2:
 编辑格式
 硬盘名称 挂载点 ext4 defaults 0 0
+*第一个0的位置表示是否对内容进行备份
+*第二个0的位置表示是否进行自检，
+	0为不进行自检
+	1表示每次都运行
+	2表示非正常关机或达到最大加载
 ```
 
 ```
