--- a/压缩解压缩指令指南.md
+++ b/压缩解压缩指令指南.md
@@ -16,15 +16,13 @@ unzip -d /opt/tmp/ a.zip *把a.zip解压到/opt/tmp中
 
 ## tar指令（打包指令）
 
--c 产生tar打包文件
-
--v 显示详细信息
-
--f 指定压缩后的文件名
-
--z 打包同时压缩
-
--x 解压tar文件
+| 参数 | 说明               |
+| ---- | ------------------ |
+| -c   | 产生tar打包文件    |
+| -v   | 显示详细信息       |
+| -f   | 指定压缩后的文件名 |
+| -z   | 打包同时压缩       |
+| -x   | 解压tar文件        |
 
 ```
 tar -zcvf a.tar.gz a.txt b.txt *压缩并打包a.txt b.txt 压缩包的文件名为a.tar.gz
