--- a/文件目录类指令指南.md
+++ b/文件目录类指令指南.md
@@ -4,7 +4,7 @@
 
 显示当前工作的绝对路径
 
-![image-20220619200805542](C:\Users\JInXiN\AppData\Roaming\Typora\typora-user-images\image-20220619200805542.png)
+![image-20220619200805542](https://propran-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220619200805542.png)
 
 ## ls （查看当前目录的所有内容）
 
@@ -13,7 +13,7 @@ ls -a *查看所有文件，包括隐藏的
 ls -l *以列表的形式，显示完整信息
 ```
 
-![image-20220619201132407](C:\Users\JInXiN\AppData\Roaming\Typora\typora-user-images\image-20220619201132407.png)
+![image-20220619201132407](https://propran-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220619201132407.png)
 
 ## cd（切换目录）
 
@@ -111,7 +111,7 @@ echo “内容” > a.txt *将双引号中的内容写入到a.txt当中
 
 ## echo（输出内容到控制台）
 
-![image-20220620171922604](C:\Users\JInXiN\Desktop\Centos指南\image-20220620171922604.png)
+![image-20220620171922604](https://propran-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220620171922604.png)
 
 ```
 echo $PATH *输出环境变量到控制台
@@ -143,4 +143,4 @@ rm -rf guazai *删除名为guazai的软连接
 
 ## history（查看命令的输入历史）
 
-![image-20220620190032521](C:\Users\JInXiN\Desktop\Centos指南\image-20220620190032521.png)
+![image-20220620190032521](https://propran-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220620190032521.png)
