--- a/磁盘查询指令指南.md
+++ b/磁盘查询指令指南.md
@@ -6,23 +6,23 @@
 df -h
 ```
 
-![image-20220717084417865](C:\Users\JInXiN\AppData\Roaming\Typora\typora-user-images\image-20220717084417865.png)
+![image-20220717084417865](https://propran-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220717084417865.png)
 
-## 查询指定目录的磁盘占用情况
+## 查看文件或目录的磁盘占用情况
 
--h 带计量单位
-
--a 对文件进行统计
-
--s 指定目录占用大小汇总
-
---max-depth=1 子目录深度
+| 参数          | 说明               |
+| ------------- | ------------------ |
+| -h            | 更加直观的表示     |
+| -a            | 对全部文件进行统计 |
+| -s            | 只显示大小的汇总   |
+| --max-depth=1 | 子目录深度         |
+| -c            | 最后加上总计       |
 
 ```
 du -ach
 ```
 
-![image-20220717084933480](C:\Users\JInXiN\AppData\Roaming\Typora\typora-user-images\image-20220717084933480.png)
+![image-20220717084933480](https://propran-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220717084933480.png)
 
 ## 对目录下的文件进行统计
 
